added grunt watch on the main files (app.css and app.js)

--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ExpressJS Static Boilerplate</title>
+	
+	<!-- STYLES -->
+	<link rel="stylesheet" href="stylesheets/app.min.css">
+
+	<!-- JS -->
+	<script src="javascripts/app.min.js"></script>
+
 </head>
 <body>
 
